// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link demo examples basic 1`] = `
.glamor-1,
[data-glamor-1] {
  font-size: 1.5em;
}

.glamor-0,
[data-glamor-0] {
  color: #164ea8;
  text-decoration: none;
}

.glamor-0:hover,
[data-glamor-0]:hover,
.glamor-0[data-simulate-hover],
[data-glamor-0][data-simulate-hover] {
  color: #1f5dc2;
  text-decoration: underline;
}

.glamor-0:focus,
[data-glamor-0]:focus,
.glamor-0[data-simulate-focus],
[data-glamor-0][data-simulate-focus] {
  color: #164ea8;
  outline: 1px solid #164ea8;
  outline-offset: 2px;
}

.glamor-0:active,
[data-glamor-0]:active,
.glamor-0[data-simulate-active],
[data-glamor-0][data-simulate-active] {
  color: #114091;
}

.glamor-3,
[data-glamor-3] {
  font-size: 0.75em;
}

.glamor-5,
[data-glamor-5] {
  font-weight: 700;
}

.glamor-7,
[data-glamor-7] {
  font-family: serif;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <div>
      <Big>
        Lorem ipsum dolor sit amet, <Link href=\\"http://example.com\\">consectetur</Link> adipiscing elit,
      </Big>

      <Small>
        sed do eiusmod tempor <Link href=\\"http://example.com\\">incididunt</Link> ut labore et dolore magna aliqua.
      </Small>

      <Bold>
        Ut enim <Link href=\\"http://example.com\\">ad minim veniam</Link> quis nostrud exercitation
      </Bold>

      <Serif>
        ullamco laboris <Link href=\\"http://example.com\\">nisi ut</Link> aliquip ex ea commodo consequat.
      </Serif>
    </div>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "Big": [Function],
          "Bold": [Function],
          "Link": [Function],
          "Serif": [Function],
          "Small": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "Big": [Function],
            "Bold": [Function],
            "Link": [Function],
            "Serif": [Function],
            "Small": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <div>
              <glamorous(p)>
                <p
                  className="glamor-1"
                >
                  Lorem ipsum dolor sit amet, 
                  <Link
                    href="http://example.com"
                  >
                    <Link
                      href="http://example.com"
                      variant="regular"
                    >
                      <a
                        className="glamor-0"
                        href="http://example.com"
                      >
                        consectetur
                      </a>
                    </Link>
                  </Link>
                   adipiscing elit,
                </p>
              </glamorous(p)>
              <glamorous(p)>
                <p
                  className="glamor-3"
                >
                  sed do eiusmod tempor 
                  <Link
                    href="http://example.com"
                  >
                    <Link
                      href="http://example.com"
                      variant="regular"
                    >
                      <a
                        className="glamor-0"
                        href="http://example.com"
                      >
                        incididunt
                      </a>
                    </Link>
                  </Link>
                   ut labore et dolore magna aliqua.
                </p>
              </glamorous(p)>
              <glamorous(p)>
                <p
                  className="glamor-5"
                >
                  Ut enim 
                  <Link
                    href="http://example.com"
                  >
                    <Link
                      href="http://example.com"
                      variant="regular"
                    >
                      <a
                        className="glamor-0"
                        href="http://example.com"
                      >
                        ad minim veniam
                      </a>
                    </Link>
                  </Link>
                   quis nostrud exercitation
                </p>
              </glamorous(p)>
              <glamorous(p)>
                <p
                  className="glamor-7"
                >
                  ullamco laboris 
                  <Link
                    href="http://example.com"
                  >
                    <Link
                      href="http://example.com"
                      variant="regular"
                    >
                      <a
                        className="glamor-0"
                        href="http://example.com"
                      >
                        nisi ut
                      </a>
                    </Link>
                  </Link>
                   aliquip ex ea commodo consequat.
                </p>
              </glamorous(p)>
            </div>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Link demo examples children 1`] = `
.glamor-0,
[data-glamor-0] {
  color: #164ea8;
  text-decoration: none;
}

.glamor-0:hover,
[data-glamor-0]:hover,
.glamor-0[data-simulate-hover],
[data-glamor-0][data-simulate-hover] {
  color: #1f5dc2;
  text-decoration: underline;
}

.glamor-0:focus,
[data-glamor-0]:focus,
.glamor-0[data-simulate-focus],
[data-glamor-0][data-simulate-focus] {
  color: #164ea8;
  outline: 1px solid #164ea8;
  outline-offset: 2px;
}

.glamor-0:active,
[data-glamor-0]:active,
.glamor-0[data-simulate-active],
[data-glamor-0][data-simulate-active] {
  color: #114091;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <Link href=\\"http://example.com\\">
      <img alt=\\"gradient placeholder\\" src=\\"/images/125x125.png\\" />
    </Link>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "Link": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "Link": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <Link
              href="http://example.com"
            >
              <Link
                href="http://example.com"
                variant="regular"
              >
                <a
                  className="glamor-0"
                  href="http://example.com"
                >
                  <img
                    alt="gradient placeholder"
                    src="/images/125x125.png"
                  />
                </a>
              </Link>
            </Link>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Link demo examples states 1`] = `
.glamor-0,
[data-glamor-0] {
  color: #164ea8;
  text-decoration: none;
}

.glamor-0:hover,
[data-glamor-0]:hover,
.glamor-0[data-simulate-hover],
[data-glamor-0][data-simulate-hover] {
  color: #1f5dc2;
  text-decoration: underline;
}

.glamor-0:focus,
[data-glamor-0]:focus,
.glamor-0[data-simulate-focus],
[data-glamor-0][data-simulate-focus] {
  color: #164ea8;
  outline: 1px solid #164ea8;
  outline-offset: 2px;
}

.glamor-0:active,
[data-glamor-0]:active,
.glamor-0[data-simulate-active],
[data-glamor-0][data-simulate-active] {
  color: #114091;
}

.glamor-24 > a,
[data-glamor-24] > a {
  margin-right: 0.5rem;
}

.glamor-6,
[data-glamor-6] {
  color: #ad0e0e;
  text-decoration: none;
}

.glamor-6:hover,
[data-glamor-6]:hover,
.glamor-6[data-simulate-hover],
[data-glamor-6][data-simulate-hover] {
  color: #c71818;
  text-decoration: underline;
}

.glamor-6:focus,
[data-glamor-6]:focus,
.glamor-6[data-simulate-focus],
[data-glamor-6][data-simulate-focus] {
  color: #ad0e0e;
  outline: 1px solid #c71818;
  outline-offset: 2px;
}

.glamor-6:active,
[data-glamor-6]:active,
.glamor-6[data-simulate-active],
[data-glamor-6][data-simulate-active] {
  color: #940909;
}

.glamor-12,
[data-glamor-12] {
  color: #06783f;
  text-decoration: none;
}

.glamor-12:hover,
[data-glamor-12]:hover,
.glamor-12[data-simulate-hover],
[data-glamor-12][data-simulate-hover] {
  color: #0a8f4c;
  text-decoration: underline;
}

.glamor-12:focus,
[data-glamor-12]:focus,
.glamor-12[data-simulate-focus],
[data-glamor-12][data-simulate-focus] {
  color: #06783f;
  outline: 1px solid #06783f;
  outline-offset: 2px;
}

.glamor-12:active,
[data-glamor-12]:active,
.glamor-12[data-simulate-active],
[data-glamor-12][data-simulate-active] {
  color: #046132;
}

.glamor-18,
[data-glamor-18] {
  color: #bd3909;
  text-decoration: none;
}

.glamor-18:hover,
[data-glamor-18]:hover,
.glamor-18[data-simulate-hover],
[data-glamor-18][data-simulate-hover] {
  color: #cf4615;
  text-decoration: underline;
}

.glamor-18:focus,
[data-glamor-18]:focus,
.glamor-18[data-simulate-focus],
[data-glamor-18][data-simulate-focus] {
  color: #bd3909;
  outline: 1px solid #cf4615;
  outline-offset: 2px;
}

.glamor-18:active,
[data-glamor-18]:active,
.glamor-18[data-simulate-active],
[data-glamor-18][data-simulate-active] {
  color: #a83207;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <DemoLayout>
      <Link href=\\"http://example.com\\">Regular</Link>
      <Link {...simulate('hover')} href=\\"http://example.com\\">Hover</Link>
      <Link {...simulate('focus')} href=\\"http://example.com\\">Focus</Link>
      <Link {...simulate('focus', 'hover')} href=\\"http://example.com\\">Focus & Hover</Link>
      <Link {...simulate('focus', 'active')} href=\\"http://example.com\\">Focus & Active</Link>
      <Link {...simulate('active')} href=\\"http://example.com\\">Active</Link>
      <br /><br />
      <Link variant=\\"danger\\" href=\\"http://example.com\\">Danger</Link>
      <Link {...simulate('hover')} variant=\\"danger\\" href=\\"http://example.com\\">Hover</Link>
      <Link {...simulate('focus')} variant=\\"danger\\" href=\\"http://example.com\\">Focus</Link>
      <Link {...simulate('focus', 'hover')} variant=\\"danger\\" href=\\"http://example.com\\">Focus & Hover</Link>
      <Link {...simulate('focus', 'active')} variant=\\"danger\\" href=\\"http://example.com\\">Focus & Active</Link>
      <Link  {...simulate('active')} variant=\\"danger\\" href=\\"http://example.com\\">Active</Link>
      <br /><br />
      <Link variant=\\"success\\" href=\\"http://example.com\\">Success</Link>
      <Link {...simulate('hover')} variant=\\"success\\" href=\\"http://example.com\\">Hover</Link>
      <Link {...simulate('focus')} variant=\\"success\\" href=\\"http://example.com\\">Focus</Link>
      <Link {...simulate('focus', 'hover')} variant=\\"success\\" href=\\"http://example.com\\">Focus & Hover</Link>
      <Link {...simulate('focus', 'active')} variant=\\"success\\" href=\\"http://example.com\\">Focus & Active</Link>
      <Link {...simulate('active')} variant=\\"success\\" href=\\"http://example.com\\">Active</Link>
      <br /><br />
      <Link variant=\\"warning\\" href=\\"http://example.com\\">Warning</Link>
      <Link {...simulate('hover')} variant=\\"warning\\" href=\\"http://example.com\\">Hover</Link>
      <Link {...simulate('focus')} variant=\\"warning\\" href=\\"http://example.com\\">Focus</Link>
      <Link {...simulate('focus', 'hover')} variant=\\"warning\\" href=\\"http://example.com\\">Focus & Hover</Link>
      <Link {...simulate('focus', 'active')} variant=\\"warning\\" href=\\"http://example.com\\">Focus & Active</Link>
      <Link {...simulate('active')} variant=\\"warning\\" href=\\"http://example.com\\">Active</Link>
    </DemoLayout>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "DemoLayout": [Function],
          "Link": [Function],
          "simulate": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "DemoLayout": [Function],
            "Link": [Function],
            "simulate": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-24"
              >
                <Link
                  href="http://example.com"
                >
                  <Link
                    href="http://example.com"
                    variant="regular"
                  >
                    <a
                      className="glamor-0"
                      href="http://example.com"
                    >
                      Regular
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-hover=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="regular"
                  >
                    <a
                      className="glamor-0"
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="regular"
                  >
                    <a
                      className="glamor-0"
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  data-simulate-hover=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-focus=""
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="regular"
                  >
                    <a
                      className="glamor-0"
                      data-simulate-focus=""
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Focus & Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  data-simulate-focus=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-active=""
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="regular"
                  >
                    <a
                      className="glamor-0"
                      data-simulate-active=""
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus & Active
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-active=""
                    href="http://example.com"
                    variant="regular"
                  >
                    <a
                      className="glamor-0"
                      data-simulate-active=""
                      href="http://example.com"
                    >
                      Active
                    </a>
                  </Link>
                </Link>
                <br />
                <br />
                <Link
                  href="http://example.com"
                  variant="danger"
                >
                  <Link
                    href="http://example.com"
                    variant="danger"
                  >
                    <a
                      className="glamor-6"
                      href="http://example.com"
                    >
                      Danger
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-hover=""
                  href="http://example.com"
                  variant="danger"
                >
                  <Link
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="danger"
                  >
                    <a
                      className="glamor-6"
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  href="http://example.com"
                  variant="danger"
                >
                  <Link
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="danger"
                  >
                    <a
                      className="glamor-6"
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  data-simulate-hover=""
                  href="http://example.com"
                  variant="danger"
                >
                  <Link
                    data-simulate-focus=""
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="danger"
                  >
                    <a
                      className="glamor-6"
                      data-simulate-focus=""
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Focus & Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  data-simulate-focus=""
                  href="http://example.com"
                  variant="danger"
                >
                  <Link
                    data-simulate-active=""
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="danger"
                  >
                    <a
                      className="glamor-6"
                      data-simulate-active=""
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus & Active
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  href="http://example.com"
                  variant="danger"
                >
                  <Link
                    data-simulate-active=""
                    href="http://example.com"
                    variant="danger"
                  >
                    <a
                      className="glamor-6"
                      data-simulate-active=""
                      href="http://example.com"
                    >
                      Active
                    </a>
                  </Link>
                </Link>
                <br />
                <br />
                <Link
                  href="http://example.com"
                  variant="success"
                >
                  <Link
                    href="http://example.com"
                    variant="success"
                  >
                    <a
                      className="glamor-12"
                      href="http://example.com"
                    >
                      Success
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-hover=""
                  href="http://example.com"
                  variant="success"
                >
                  <Link
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="success"
                  >
                    <a
                      className="glamor-12"
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  href="http://example.com"
                  variant="success"
                >
                  <Link
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="success"
                  >
                    <a
                      className="glamor-12"
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  data-simulate-hover=""
                  href="http://example.com"
                  variant="success"
                >
                  <Link
                    data-simulate-focus=""
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="success"
                  >
                    <a
                      className="glamor-12"
                      data-simulate-focus=""
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Focus & Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  data-simulate-focus=""
                  href="http://example.com"
                  variant="success"
                >
                  <Link
                    data-simulate-active=""
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="success"
                  >
                    <a
                      className="glamor-12"
                      data-simulate-active=""
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus & Active
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  href="http://example.com"
                  variant="success"
                >
                  <Link
                    data-simulate-active=""
                    href="http://example.com"
                    variant="success"
                  >
                    <a
                      className="glamor-12"
                      data-simulate-active=""
                      href="http://example.com"
                    >
                      Active
                    </a>
                  </Link>
                </Link>
                <br />
                <br />
                <Link
                  href="http://example.com"
                  variant="warning"
                >
                  <Link
                    href="http://example.com"
                    variant="warning"
                  >
                    <a
                      className="glamor-18"
                      href="http://example.com"
                    >
                      Warning
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-hover=""
                  href="http://example.com"
                  variant="warning"
                >
                  <Link
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="warning"
                  >
                    <a
                      className="glamor-18"
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  href="http://example.com"
                  variant="warning"
                >
                  <Link
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="warning"
                  >
                    <a
                      className="glamor-18"
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  data-simulate-hover=""
                  href="http://example.com"
                  variant="warning"
                >
                  <Link
                    data-simulate-focus=""
                    data-simulate-hover=""
                    href="http://example.com"
                    variant="warning"
                  >
                    <a
                      className="glamor-18"
                      data-simulate-focus=""
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Focus & Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  data-simulate-focus=""
                  href="http://example.com"
                  variant="warning"
                >
                  <Link
                    data-simulate-active=""
                    data-simulate-focus=""
                    href="http://example.com"
                    variant="warning"
                  >
                    <a
                      className="glamor-18"
                      data-simulate-active=""
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus & Active
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  href="http://example.com"
                  variant="warning"
                >
                  <Link
                    data-simulate-active=""
                    href="http://example.com"
                    variant="warning"
                  >
                    <a
                      className="glamor-18"
                      data-simulate-active=""
                      href="http://example.com"
                    >
                      Active
                    </a>
                  </Link>
                </Link>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Link demo examples variants 1`] = `
.glamor-0,
[data-glamor-0] {
  color: #164ea8;
  text-decoration: none;
}

.glamor-0:hover,
[data-glamor-0]:hover,
.glamor-0[data-simulate-hover],
[data-glamor-0][data-simulate-hover] {
  color: #1f5dc2;
  text-decoration: underline;
}

.glamor-0:focus,
[data-glamor-0]:focus,
.glamor-0[data-simulate-focus],
[data-glamor-0][data-simulate-focus] {
  color: #164ea8;
  outline: 1px solid #164ea8;
  outline-offset: 2px;
}

.glamor-0:active,
[data-glamor-0]:active,
.glamor-0[data-simulate-active],
[data-glamor-0][data-simulate-active] {
  color: #114091;
}

.glamor-4 > a,
[data-glamor-4] > a {
  margin-right: 0.5rem;
}

.glamor-1,
[data-glamor-1] {
  color: #ad0e0e;
  text-decoration: none;
}

.glamor-1:hover,
[data-glamor-1]:hover,
.glamor-1[data-simulate-hover],
[data-glamor-1][data-simulate-hover] {
  color: #c71818;
  text-decoration: underline;
}

.glamor-1:focus,
[data-glamor-1]:focus,
.glamor-1[data-simulate-focus],
[data-glamor-1][data-simulate-focus] {
  color: #ad0e0e;
  outline: 1px solid #c71818;
  outline-offset: 2px;
}

.glamor-1:active,
[data-glamor-1]:active,
.glamor-1[data-simulate-active],
[data-glamor-1][data-simulate-active] {
  color: #940909;
}

.glamor-2,
[data-glamor-2] {
  color: #06783f;
  text-decoration: none;
}

.glamor-2:hover,
[data-glamor-2]:hover,
.glamor-2[data-simulate-hover],
[data-glamor-2][data-simulate-hover] {
  color: #0a8f4c;
  text-decoration: underline;
}

.glamor-2:focus,
[data-glamor-2]:focus,
.glamor-2[data-simulate-focus],
[data-glamor-2][data-simulate-focus] {
  color: #06783f;
  outline: 1px solid #06783f;
  outline-offset: 2px;
}

.glamor-2:active,
[data-glamor-2]:active,
.glamor-2[data-simulate-active],
[data-glamor-2][data-simulate-active] {
  color: #046132;
}

.glamor-3,
[data-glamor-3] {
  color: #bd3909;
  text-decoration: none;
}

.glamor-3:hover,
[data-glamor-3]:hover,
.glamor-3[data-simulate-hover],
[data-glamor-3][data-simulate-hover] {
  color: #cf4615;
  text-decoration: underline;
}

.glamor-3:focus,
[data-glamor-3]:focus,
.glamor-3[data-simulate-focus],
[data-glamor-3][data-simulate-focus] {
  color: #bd3909;
  outline: 1px solid #cf4615;
  outline-offset: 2px;
}

.glamor-3:active,
[data-glamor-3]:active,
.glamor-3[data-simulate-active],
[data-glamor-3][data-simulate-active] {
  color: #a83207;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <DemoLayout>
      <Link href=\\"http://example.com\\">Regular</Link>
      <Link variant=\\"danger\\" href=\\"http://example.com\\">Danger</Link>
      <Link variant=\\"success\\" href=\\"http://example.com\\">Success</Link>
      <Link variant=\\"warning\\" href=\\"http://example.com\\">Warning</Link>
    </DemoLayout>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "DemoLayout": [Function],
          "Link": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "DemoLayout": [Function],
            "Link": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-4"
              >
                <Link
                  href="http://example.com"
                >
                  <Link
                    href="http://example.com"
                    variant="regular"
                  >
                    <a
                      className="glamor-0"
                      href="http://example.com"
                    >
                      Regular
                    </a>
                  </Link>
                </Link>
                <Link
                  href="http://example.com"
                  variant="danger"
                >
                  <Link
                    href="http://example.com"
                    variant="danger"
                  >
                    <a
                      className="glamor-1"
                      href="http://example.com"
                    >
                      Danger
                    </a>
                  </Link>
                </Link>
                <Link
                  href="http://example.com"
                  variant="success"
                >
                  <Link
                    href="http://example.com"
                    variant="success"
                  >
                    <a
                      className="glamor-2"
                      href="http://example.com"
                    >
                      Success
                    </a>
                  </Link>
                </Link>
                <Link
                  href="http://example.com"
                  variant="warning"
                >
                  <Link
                    href="http://example.com"
                    variant="warning"
                  >
                    <a
                      className="glamor-3"
                      href="http://example.com"
                    >
                      Warning
                    </a>
                  </Link>
                </Link>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;
